--- a/src/stylesheets/BookNowForm.css
+++ b/src/stylesheets/BookNowForm.css
@@ -1,37 +1,41 @@
-.BookNow-pop-up-main{
+.BookNow-pop-up-main {
     position: fixed;
-    top: 5%;
-    left: 40%;
-    width:30%;
+    top: 12%;
+    left: 35%;
+    width: 30%;
     height: 70vh;
     background-color: rgb(255, 255, 255);
     box-shadow: 1px 1px 7px 3px gray;
     padding: 20px;
     z-index: 1111;
 }
-.BookNow-pop-up-heading{
+
+.BookNow-pop-up-heading {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.BookNow-pop-up-heading h1{
+
+.BookNow-pop-up-heading h1 {
     font-family: "Brandon_bld";
-font-size: 32px;
-text-align: left;
+    font-size: 32px;
+    text-align: left;
 }
-.pop-up-cancel{
+
+.pop-up-cancel {
     background: none;
-    border:none;
+    border: none;
     font-size: 30px;
     cursor: pointer;
 }
-.pop-up-form{
+
+.pop-up-form {
     display: flex;
-flex-direction: column;
-align-items: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-.pop-up-form input{
+.pop-up-form input {
     width: 70%;
     height: 35px;
     border-radius: 5px;
@@ -39,53 +43,65 @@ align-items: center;
     border: 1px solid gray;
     margin-top: 10px;
 }
-.BookNow_broucher_btn{
+
+.BookNow_broucher_btn {
     font-family: "Brandon_med";
     display: flex;
     justify-content: center;
     align-items: center;
     border-image: linear-gradient(to right, black, white) 1;
-    background:none;
+    background: none;
     margin-top: 10px;
     height: 50px;
     padding: 10px 10px 10px 10px;
     cursor: pointer;
     font-size: 18px;
-text-align: center;
-color: black;
-text-decoration: none;
+    text-align: center;
+    color: black;
+    text-decoration: none;
 }
-.pop-up-privacy-policy{
-font-size: 20px;
-text-align: center;
-font-family: "Brandon_reg";
-margin-left: 30px;
-padding-bottom: 20px;
+
+.BookNow_broucher_btn:hover {
+    background-color: #CDAF4C;
+    border-image: linear-gradient(to right, white, black) 1;
+    padding-left: 20px;
+    transition: ease-in 0.3s;
 }
+
+.pop-up-privacy-policy {
+    font-size: 20px;
+    text-align: center;
+    font-family: "Brandon_reg";
+    margin-left: 30px;
+    padding-bottom: 20px;
+}
+
 @media screen and (max-width:900px) {
-    .BookNow-pop-up-main{
-        margin-top:5%;
+    .BookNow-pop-up-main {
+        margin-top: 5%;
     }
 
-    .BookNow-pop-up-main{
+    .BookNow-pop-up-main {
         width: 60%;
         left: 20%;
         height: auto;
     }
-    .BookNow-pop-up-heading h1{
-    font-size: 25px;
+
+    .BookNow-pop-up-heading h1 {
+        font-size: 25px;
     }
 }
 
 @media screen and (max-width:480px) {
-    .BookNow-pop-up-main{
-        width:70%;
+    .BookNow-pop-up-main {
+        width: 70%;
         left: 10%;
         height: auto;
         margin-top: 15%;
     }
-    .BookNow-pop-up-heading h1{
-    font-size: 25px;
+
+    .BookNow-pop-up-heading h1 {
+        font-size: 25px;
     }
-    
+
 }
